objects/pse__Resource_Change__c.object
<CustomObject>
    <customHelpPage>pse__ResourceChangeHelp</customHelpPage>
    <description>Resource Change records are automatically created to capture changes and effective dates for attributes that affect utilization calculations.</description>
    <fields>
        <fullName>pse__Change_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Change Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__New_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resource Changes (New Group)</relationshipLabel>
        <relationshipName>Resource_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Is_Resource_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Is Resource Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__New_Is_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Is Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__New_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resource Changes</relationshipLabel>
        <relationshipName>Resource_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resource Changes (New Region)</relationshipLabel>
        <relationshipName>Resource_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__New_Resource_Role__c</fullName>
        <label>New Resource Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__New_Utilization_Target__c</fullName>
        <label>New Utilization Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__New_Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Resource Changes (New Work Calendar)</relationshipLabel>
        <relationshipName>Resource_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Resource Changes</relationshipLabel>
        <relationshipName>Resource_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Is_Resource_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Is Resource Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Old_Is_Resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Is Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Old_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Resource Changes (Old Practice)</relationshipLabel>
        <relationshipName>Resource_Changes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The old region for the resource, if changed</description>
        <label>Old Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Resource Changes</relationshipLabel>
        <relationshipName>Resource_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Old_Resource_Role__c</fullName>
        <label>Old Resource Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Old_Utilization_Target__c</fullName>
        <label>Old Utilization Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Old_Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Resource Changes</relationshipLabel>
        <relationshipName>Resource_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Resource__c</fullName>
        <description>The master resource</description>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Changes</relationshipLabel>
        <relationshipName>Resource_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Resource Change</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RC{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Resource Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>